--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
 body {
+  background: #111;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Segoe UI", "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+p,
+a,
+div {
+  color: #fff;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container,
+.filter-container {
+  max-width: 1200px;
+  margin: 20px auto;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.top-container {
+  text-align: center;
+}
+
+.top-container select {
+  background: none;
+  color: #fff;
+  margin: 10px;
+  padding: 5px 8px;
+  outline: none;
+}
+
+.top-container select option {
+  background: #000;
+  color: #fff;
+}
+
+.anime-card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.anime-card {
+  flex: 0 0 20%;
+  text-align: center;
+}
+
+.anime-card a {
+  display: block;
+  margin: 20px;
+  position: relative;
+}
+
+.anime-card .thumbnail {
+  object-fit: cover;
+  width: 100%;
+  height: 280px;
+  border-radius: 8px;
+  transform: scale(0.9);
+  transition: 0.3s ease-in-out;
+}
+
+.anime-card a:hover .thumbnail {
+  transform: scale(1);
+}
+
+.anime-card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  padding: 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  top: 0;
+  left: 0;
+  background: rgb(0 0 0 / 0.7);
+  backdrop-filter: blur(2px);
+  border-radius: 8px;
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.anime-card a:hover .anime-card-content {
+  opacity: 100;
+}
+
+.anime-card-content .title {
+  /* display: -webkit-box; */
+  /* -webkit-box-orient: vertical; */
+  /* -webkit-line-clamp: 2; */
+  /* overflow: hidden; */
+}
+
+.anime-card-content button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  background: none;
+  outline: none;
+  width: 120px;
+  height: 40px;
+  cursor: pointer;
+  color: #e9e9e9;
+  border: 2px solid #e9e9e9;
+  border-radius: 12px;
+  transition: transform 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+.anime-card-content button:hover {
+  transform: translateY(-3px);
+}
+
+@media (max-width: 1100px) {
+  .anime-card {
+    flex: 0 0 25%;
+  }
+}
+
+@media (max-width: 768px) {
+  .anime-card {
+    flex: 0 0 33.333%;
+  }
+}
+
+@media (max-width: 576px) {
+  .anime-card {
+    flex: 0 0 50%;
+  }
 }
