--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,6 @@ a {
   text-decoration: none;
 }
 
-.container,
-.filter-container {
-  max-width: 1200px;
-  margin: 20px auto;
-}
-
 h1 {
   font-size: 2.5em;
   margin-bottom: 20px;
@@ -35,14 +29,24 @@ h1 {
   display: none;
 }
 
+.container,
 .top-container {
-  text-align: center;
+  max-width: 1200px;
+  margin: 20px auto;
 }
 
+.top-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px;
+}
+
+.top-container input,
 .top-container select {
   background: none;
+  border: 1px solid #fff;
   color: #fff;
-  margin: 10px;
+  margin-left: 10px;
   padding: 5px 8px;
   outline: none;
 }
@@ -143,6 +147,16 @@ h1 {
 @media (max-width: 1100px) {
   .anime-card {
     flex: 0 0 25%;
+  }
+}
+
+@media (max-width: 992px) {
+  .top-container {
+    display: block;
+    text-align: center;
+  }
+  .top-container > * {
+    margin-bottom: 20px;
   }
 }
 
