--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@ h1 {
   outline: none;
 }
 
+.top-container .label-sort {
+  margin-left: 20px;
+}
+
 .top-container select option {
   background: #000;
   color: #fff;
@@ -75,7 +79,7 @@ h1 {
 
 .anime-card a {
   display: block;
-  margin: 20px;
+  margin: 20px 20px 0;
   position: relative;
 }
 
