--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,8 @@ nav a:hover {
   outline: none;
 }
 
-.top-container .label-sort {
-  margin-left: 20px;
+.top-container input {
+  margin-right: 20px;
 }
 
 .top-container select option {
@@ -221,6 +221,13 @@ nav a:hover {
 
 .anime-container .right h3 {
   margin-bottom: 10px;
+}
+
+.anime-container .right iframe {
+  border: none;
+  margin-top: 20px;
+  width: 100%;
+  height: 360px;
 }
 
 @media (max-width: 1100px) {
