--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,10 @@ nav a {
   padding-bottom: 2px;
 }
 
+nav a:first-child {
+  margin-left: 0;
+}
+
 nav a:hover {
   border-color: #fff;
 }
@@ -85,7 +89,8 @@ nav a:hover {
   color: #fff;
 }
 
-.loader {
+.loader,
+.msg {
   letter-spacing: 5px;
   margin: 50px 0;
   text-align: center;
@@ -195,12 +200,12 @@ nav a:hover {
 
 .anime-container .right button {
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 700;
   background: none;
   margin-bottom: 15px;
   outline: none;
-  width: 160px;
+  width: 180px;
   height: 40px;
   cursor: pointer;
   color: #e9e9e9;
@@ -208,6 +213,7 @@ nav a:hover {
   border-radius: 12px;
   transition: 0.3s ease-in-out;
   text-decoration: none;
+  margin-right: 10px;
 }
 
 .anime-container .right button:hover {
@@ -247,6 +253,15 @@ nav a:hover {
 }
 
 @media (max-width: 768px) {
+  .nav-container {
+    display: block;
+    text-align: center;
+  }
+
+  h1 {
+    margin-bottom: 10px;
+  }
+
   .anime-card {
     flex: 0 0 33.333%;
   }
@@ -258,10 +273,6 @@ nav a:hover {
 }
 
 @media (max-width: 576px) {
-  h1.logo {
-    font-size: 1.2em;
-  }
-
   .anime-card {
     flex: 0 0 50%;
   }
