--- a/src/index.css
+++ b/src/index.css
@@ -205,7 +205,7 @@ nav a:hover {
   background: none;
   margin-bottom: 15px;
   outline: none;
-  width: 180px;
+  width: auto;
   height: 40px;
   cursor: pointer;
   color: #e9e9e9;
@@ -214,6 +214,7 @@ nav a:hover {
   transition: 0.3s ease-in-out;
   text-decoration: none;
   margin-right: 10px;
+  padding: 0 20px;
 }
 
 .anime-container .right button:hover {
